big escalating project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body preserveAspectRatio="xMinYMin meet" style="scroll-behavior:smooth" id="body">
     <div id="main-frame"></div>
 
-    <!-- <script>
+    <script>
       var body = document.body,
           timer;
 
@@ -29,6 +29,6 @@
           body.classList.remove('disable-hover')
         }, 500);
       }, false);
-    </script> -->
+    </script>
   </body>
 </html>
